--- a/release.html
+++ b/release.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Ls.Css">
     <title>LiberdadeSinfonia</title>
 </head>
-<body>
+<body id="body3">
     <h1 class="titulo">LIBERDADE SINFONIA</h1>
     <style>
         @font-face {
@@ -14,6 +14,32 @@
             src: url(TAN-PARADISO.otf);
         }
     </style>
+
+<div class="text-container">
+    <p class="text-content">
+        A banda Liberdade Sinfonia,
+originária da periferia, é um exemplo
+de autenticidade e independência,
+destacando-se por sua diversidade
+sonora única. Suas composições
+autorais exploram uma ampla gama
+de ritmos inspirados na Música
+Popular Brasileira, e são moldadas
+pelas emoções do cotidiano –
+romance, luta e esperança. O som
+da banda captura a essência da
+vivência periférica, combinando
+melodias eruditas do violoncelo,
+ritmos ancestrais da percussão e o
+groove soul do baixo, criando uma
+identidade musical distintiva e
+marcante
+    </p>
+</div>
+
+<a href="integrantes.html">
+    <button id="btnr" class="rect-btn">Integrantes</button>
+</a>
 
 
       
