--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
             </button>
             <div class="button-group">
-                <a href="videos.html">
+                <a href="videoboo.html">
                     <button class="rect-btn">Vídeos</button>
                 </a>
 
