--- a/videoboo.html
+++ b/videoboo.html
@@ -58,5 +58,20 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+      // Desabilitar a rolagem automática do carrossel
+      $('#carouselExampleIndicators').carousel({
+          interval: false // Define o intervalo como falso
+      });
+
+      // Avançar o carrossel ao clicar nos controles
+      $('.carousel-control-prev, .carousel-control-next').on('click', function () {
+          var $activeItem = $('.carousel-item.active iframe');
+          var src = $activeItem.attr('src'); // Obtém o src do iframe ativo
+          $activeItem.attr('src', src); // Reinicia o iframe para o vídeo continuar na mesma posição
+      });
+  </script>
+  
   </body>
 </html>
